syntax = "proto3";

package customer;

import "public_messages.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option csharp_namespace = "CrudTestMicroservice.Protobuf.Protos.Customer";

service CustomerContract
{
    rpc CreateNewCustomer(CreateNewCustomerRequest) returns (CreateNewCustomerResponse){
        option (google.api.http) = {
            post: "/CreateNewCustomer"
            body: "*"
        };
    };
    rpc UpdateCustomer(UpdateCustomerRequest) returns (google.protobuf.Empty){
        option (google.api.http) = {
            put: "/UpdateCustomer"
            body: "*"
        };
    };
    rpc DeleteCustomer(DeleteCustomerRequest) returns (google.protobuf.Empty){
        option (google.api.http) = {
            delete: "/DeleteCustomer"
            body: "*"
        };
    };
    rpc GetCustomer(GetCustomerRequest) returns (GetCustomerResponse){
        option (google.api.http) = {
            get: "/GetCustomer"
            
        };
    };
    rpc GetAllCustomerByFilter(GetAllCustomerByFilterRequest) returns (GetAllCustomerByFilterResponse){
        option (google.api.http) = {
            get: "/GetAllCustomerByFilter"
            
        };
    };
}
message CreateNewCustomerRequest
{
    string first_name = 1;
    string last_name = 2;
    google.protobuf.Timestamp date_of_birth = 3;
    string phone_number = 4;
    string email = 5;
    string bank_account_number = 6;
}
message CreateNewCustomerResponse
{
    int64 id = 1;
}
message UpdateCustomerRequest
{
    int64 id = 1;
    string first_name = 2;
    string last_name = 3;
    google.protobuf.Timestamp date_of_birth = 4;
    string phone_number = 5;
    string email = 6;
    string bank_account_number = 7;
}
message DeleteCustomerRequest
{
    int64 id = 1;
}
message GetCustomerRequest
{
    int64 id = 1;
}
message GetCustomerResponse
{
    int64 id = 1;
    string first_name = 2;
    string last_name = 3;
    google.protobuf.Timestamp date_of_birth = 4;
    string phone_number = 5;
    string email = 6;
    string bank_account_number = 7;
}
message GetAllCustomerByFilterRequest
{
    messages.PaginationState pagination_state = 1;
    google.protobuf.StringValue sort_by = 2;
    GetAllCustomerByFilterFilter filter = 3;
}
message GetAllCustomerByFilterFilter
{
    google.protobuf.Int64Value id = 1;
    google.protobuf.StringValue first_name = 2;
    google.protobuf.StringValue last_name = 3;
    google.protobuf.Timestamp date_of_birth = 4;
    google.protobuf.StringValue phone_number = 5;
    google.protobuf.StringValue email = 6;
    google.protobuf.StringValue bank_account_number = 7;
}
message GetAllCustomerByFilterResponse
{
    messages.MetaData meta_data = 1;
    repeated GetAllCustomerByFilterResponseModel models = 2;
}
message GetAllCustomerByFilterResponseModel
{
    int64 id = 1;
    string first_name = 2;
    string last_name = 3;
    google.protobuf.Timestamp date_of_birth = 4;
    string phone_number = 5;
    string email = 6;
    string bank_account_number = 7;
}
