syntax = "proto3";

package messages;

option csharp_namespace = "CrudTestMicroservice.Protobuf.Protos";
service PublicMessageContract{}
message PaginationState
{
  int32 page_number = 1;

  int32 page_size = 2;
}
message MetaData
{
  int64 current_page = 1;

  int64 total_page = 2;

  int64 page_size = 3;

  int64 total_count = 4;

  bool has_previous = 5;

  bool has_next = 6;
}
message DecimalValue 
{

    int64 units = 1;

    sfixed32 nanos = 2;
}
